# DTU_MLOps_111

./: .dockerignore  .env  .env.example  .gcloudignore  .gitignore  404.html  DOCKER_INFERENCE.md  DOCKER_TRAINING.md  README.md  api.dockerfile  api_entrypoint.sh  bento.dockerfile  bento_entrypoint.sh  bentofile.yaml  cloudbuild.yaml  data.dvc  entrypoint.sh  index.html  inference.dockerfile  inference_entrypoint.sh  mac_train_entrypoint.sh  main.py  my_mac_trainer.py  nnUNet_preprocessed.dvc  nnUNet_raw.dvc  nnUNet_results.dvc  prepare_inference_input.py  pyproject.toml  requirements.runtime.txt  requirements.txt  tasks.py  train.dockerfile  train_entrypoint.sh  visualize_results.py
.dvc/: config
.github/workflows/: cml.yaml  linting.yaml  tests.yaml
docs/: index.md  mkdocs.yaml
docs/source/: commands.md  environment.md  installation.md  quickstart.md  troubleshooting.md  workflows.md
dtu_mlops_111/: README.md  tasks.py
dtu_mlops_111/src/dtu_mlops_111/: train.py
reports/: README.md
scripts/: link_model.py
search/: search_index.json
source/commands/: index.html
source/environment/: index.html
source/installation/: index.html
source/quickstart/: index.html
source/troubleshooting/: index.html
source/workflows/: index.html
src/dtu_mlops_111/: api.py  bento_service.py  bentoml_client.py  data.py  data_drift.py  model.py  predictors.py  run_inference.py  train.py  trainers.py  utils.py  visualize.py
tests/: test_data.py  test_data_drift.py
tests/integrationtests/: test_apis.py
tests/performancetests/: locustfile.py  test_model.py
